---------------------------
  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano

---------------------------
  Jackdmp changes log
---------------------------

2008-05-31 Stephane Letz  <letz@grame.fr>

	* Add missing include for proper compilation when jack headers are not installed.

2008-05-30 Stephane Letz  <letz@grame.fr>

	* Avoid using Terminate when "quitting" in RT thread. Cleanup JackEngineInterface.

2008-05-29 Stephane Letz  <letz@grame.fr>

	* Tim Blechmann patch for JackPosixSemaphore (still to test...).
	* Correct JackWinThread::Terminate.

2008-05-28 Stephane Letz  <letz@grame.fr>

	* New testMutex test, correct timing in drivers.

2008-05-27 Stephane Letz  <letz@grame.fr>

	* Correct timing in drivers : frame time has to be incremented before Read.

2008-05-26 Stephane Letz  <letz@grame.fr>

	* Merge control branch.
	* Cleanup example clients : use jack_client_open and install a proper 'quit' signal handler.

2008-05-24 Stephane Letz  <letz@grame.fr>

	* Tim Blechmann RAII idiom patch for JackServer ressource initialization.

2008-05-23 Stephane Letz  <letz@grame.fr>

	* Use StartSync to start the client notification thread, otherwise initial notifications from the server may be lost.
	* Tim Blechmann JackEngine cleanup patch.
	* Call init callback in notification thread also.

2008-05-22 Stephane Letz  <letz@grame.fr>

	* Correct JackPort::ClearBuffer.
	* Correct JackEngine inheritance graph.

2008-05-21 Stephane Letz  <letz@grame.fr>

	* Correct JackEngine::PortUnRegister, JackEngine::ClientCloseAux and JackEngine::ClientDeactivate to correctly send notifications. 
	* New jack_get_client_pid API, implemented on server side.