@@ -10,6 +10,9 @@
 #include <string.h>
 #include <math.h>
 #include <signal.h>
+#ifndef WIN32
+#include <unistd.h>
+#endif
 #include <jack/jack.h>
 
 jack_port_t *input_port;
@@ -34,13 +37,6 @@ static void signal_handler(int sig)
 	jack_client_close(client);
 	fprintf(stderr, "signal received, exiting ...\n");
 	exit(0);
-}
-
-static int Jack_Graph_Order_Callback(void *arg)
-{
-	static int reorder = 0;
-    printf("Jack_Graph_Order_Callback count = %ld\n", reorder++);
-    return 0;
 }
 
 /* a simple state machine for this client */
@@ -174,11 +170,6 @@ main (int argc, char *argv[])
 		fprintf(stderr, "no more JACK ports available\n");
 		exit (1);
 	}
-
-	if (jack_set_graph_order_callback(client, Jack_Graph_Order_Callback, 0) != 0) {
-        printf("Error when calling Jack_Graph_Order_Callback() !\n");
-    }
-
 
 	/* Tell the JACK server that we are ready to roll.  Our
 	 * process() callback will start running now. */
